# src/apis/controllers/lazada.js
@@ -162,7 +162,7 @@ module.exports.refreshToken = async (req, res) =>{
                 }
             });
 
-            await Storage.update({_id: storage._id}, storage, { upsert: true})
+            await Storage.updateOne({_id: storage._id}, storage, { upsert: true})
            
             
             res.status(response.statusCode).send(response.body)
@@ -234,6 +234,46 @@ module.exports.getProductById = async (req, res) =>{
             'method': 'GET',
             'url': apiUrl+apiPath+
             '?item_id='+item_id+
+            '&app_key='+appKey+
+            '&sign_method=sha256&timestamp='+timestamp+
+            '&access_token='+accessToken+
+            '&sign='+sign,
+            'headers': {
+            }
+        };
+        console.log(options)
+        request(options, function (error, response) {
+            //if (error) throw new Error(error);
+            //console.log(response.body);
+            const product = JSON.parse(response.body)
+            res.send(product)
+        });
+    } catch (e) {
+        res.status(500).send(Error(e));
+    }
+}
+module.exports.getProductBySellerSku= async (req, res) =>{
+    
+    const apiUrl = 'https://api.lazada.vn/rest' 
+    const apiPath=  '/product/item/get'
+    const appSecret = process.env.LAZADA_APP_SECRET
+    const appKey = process.env.LAZADA_APP_KEY 
+    let accessToken =  req.accessToken
+    
+    const timestamp = Date.now()
+    const commonRequestParams = {
+        "app_key": appKey,
+        "timestamp": timestamp,
+        "sign_method": "sha256",
+        "access_token":accessToken,
+    }
+    const seller_sku = req.params.id
+    const sign = signRequest(appSecret, apiPath, {...commonRequestParams, seller_sku})
+    try {
+        var options = {
+            'method': 'GET',
+            'url': apiUrl+apiPath+
+            '?seller_sku='+seller_sku+
             '&app_key='+appKey+
             '&sign_method=sha256&timestamp='+timestamp+
             '&access_token='+accessToken+
@@ -962,7 +1002,7 @@ module.exports.cancelOrderOnLazada = async (req, res) =>{
     const timestamp = Date.now()
     const reason_detail = req.body.reason_detail // not required
     const reason_id = req.body.reason_id
-    const order_item_id = req.params.id
+    const order_seller_sku = req.params.id
     const commonRequestParams = {
         "app_key": appKey,
         "timestamp": timestamp,
